Adjust basket position in index.html

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                 font-size: 5em;
                 width: 130px;
                 height: 100px;
-                bottom: calc(120px + env(safe-area-inset-bottom));
+                bottom: calc(40px + env(safe-area-inset-bottom))
             }
 
             .falling-heart {
@@ -472,7 +472,7 @@
                 font-size: 7em;
                 width: 180px;
                 height: 140px;
-                bottom: calc(120px + env(safe-area-inset-bottom));
+                bottom: calc(110px + env(safe-area-inset-bottom));
             }
 
             .falling-heart {
